feat(romantic-event): added event step options view
